<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include android:id="@id/title" layout="@layout/layout_title" />
    <TextView android:textSize="15.0sp" android:textColor="@color/log_off_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="24.0dip" android:layout_marginRight="24.0dip" android:text="@string/log_off_tip" />
    <TextView android:textSize="13.0sp" android:textColor="#ff92929b" android:id="@id/tvTip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="24.0dip" android:text="@string/log_off_tip1" android:lineSpacingExtra="6.0dip" />
    <TextView android:textSize="13.0sp" android:textColor="#ff92929b" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="24.0dip" android:text="@string/log_off_tip2" android:lineSpacingExtra="6.0dip" />
    <TextView android:textSize="13.0sp" android:textColor="#ff92929b" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="24.0dip" android:text="@string/log_off_tip3" android:lineSpacingExtra="6.0dip" />
    <TextView android:textSize="13.0sp" android:textColor="#ff92929b" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="24.0dip" android:text="@string/log_off_tip4" android:lineSpacingExtra="6.0dip" />
    <TextView android:textSize="15.0sp" android:textColor="#ff000000" android:gravity="center" android:id="@id/tv_next" android:background="@drawable/shape_general_button_lighted" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="24.0dip" android:layout_marginTop="40.0dip" android:layout_marginRight="24.0dip" android:layout_marginBottom="68.0dip" android:text="@string/log_off_next_btn" />
</LinearLayout>
