<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="24.0sp" android:textStyle="bold" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:text="@string/step_2" android:layout_marginStart="23.0dip" />
    <TextView android:textSize="14.0sp" android:textColor="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="23.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="23.0dip" android:text="@string/authorize_other_device_step_tip2" android:layout_marginHorizontal="23.0dip" />
    <ImageView android:layout_gravity="center_horizontal" android:layout_width="194.0dip" android:layout_height="194.0dip" android:layout_marginTop="24.0dip" android:src="@drawable/login_authorizetion_tip" />
    <TextView android:textSize="15.0sp" android:textColor="@color/select_authorize_device_text_color" android:gravity="center" android:id="@id/send_authorize" android:background="@drawable/select_send_authorize_bg" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="23.0dip" android:layout_marginTop="40.0dip" android:layout_marginRight="23.0dip" android:text="@string/resend_1_ss" android:layout_marginHorizontal="23.0dip" />
</LinearLayout>
