<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:paddingBottom="80.0dip" android:layout_width="300.0dip" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@drawable/shape_update_bg" android:paddingBottom="20.0dip" android:layout_width="288.0dip" android:layout_height="wrap_content" android:layout_margin="6.0dip" android:minHeight="250.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <TextView android:textSize="18.0sp" android:textColor="@color/white" android:ellipsize="end" android:gravity="center" android:id="@id/tv_parental_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/parental_controls" android:singleLine="true" />
        <TextView android:textColor="@color/b9b8c1" android:ellipsize="end" android:id="@id/title_tip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/enter_4_digit_password" android:singleLine="true" />
        <com.gxgx.base.view.PasswordInputView android:textSize="40.0sp" android:textStyle="bold" android:id="@id/pass_word_input" android:background="@null" android:padding="1.0dip" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_marginLeft="43.0dip" android:layout_marginTop="22.0dip" android:layout_marginRight="43.0dip" android:layout_marginBottom="18.0dip" android:inputType="number" android:layout_marginHorizontal="43.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_top_tip" app:pwv_borderColor="@color/color_1D1E28" app:pwv_borderStyle="full_box" app:pwv_maxLength="4" app:pwv_pwdColor="@color/bottom_login_code_num_text" app:pwv_pwdStyle="plaintext" app:pwv_radius="4.0dip" app:pwv_spacing="12.0dip" app:pwv_strokeWidth="2.0dip" />
        <TextView android:textColor="@color/color_FF3737" android:id="@id/tip_error" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/incorrect_password" />
        <TextView android:textSize="11.0sp" android:textColor="@color/color_999999" android:id="@id/tip_content" android:paddingLeft="25.0dip" android:paddingRight="25.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/parental_controls_tip1" android:paddingHorizontal="25.0dip" />
        <TextView android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/forget_password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/forget_password" />
    </LinearLayout>
    <ImageView android:id="@id/close" android:layout_width="24.0dip" android:layout_height="24.0dip" android:src="@drawable/ic_close_relation_new" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
